--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,49 +1,54 @@
+body {
+  background-color: rgb(201, 32, 32);
+}
 
-        body {
-            background-color: rgb(201, 32, 32);
-        }
+:root {
+  --fire-color: #ff6a00;
+  --water-color: #007bff;
+  --grass-color: rgba(0, 255, 17, 0.733);
+}
 
-        .conteudo {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            align-items: center;
-            gap: 5px;
-        }
-        .card {
-            border-radius: 5px;
-            border: 1px solid #ccc;
-            width: 150px;
-            /* margin: auto; */
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            background-color: rgb(252, 252, 252);
-        }
+.conteudo {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  max-width: 800px;
+  margin: auto;
+}
+.card {
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  width: 150px;
+  /* margin: auto; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(252, 252, 252);
+}
 
-        .tipos {
-            display: flex;
-            gap: 5px;
-        }
+.tipos {
+  display: flex;
+  gap: 5px;
+}
 
-        .tipos p:nth-child(1) {
-            color: white;
-            background-color: orange;
-            border-radius: 8px;
-            padding: 4px;
-    
-        }
+.tipos p:nth-child(1) {
+  color: white;
+  background-color: orange;
+  border-radius: 8px;
+  padding: 4px;
+}
 
-        .botaoTipo {
-            color: black;
-            background-color: #ccc;
-            border-radius: 8px;
-            padding: 4px;
-        }
+.botaoTipo {
+  color: black;
+  background-color: #ccc;
+  border-radius: 8px;
+  padding: 4px;
+}
 
-
-        h1 {
-            color: white;
-            text-align: center;
-        }
+h1 {
+  color: white;
+  text-align: center;
+}
